Fix issue with Jfx13 being injected for usage